# SessionSmith

./: .gitignore  Cargo.toml  Makefile  README.md
campaigns/: .example.toml
docs/: configuration.md  pipeline.md  presets.md  setup.md
presets/: blades.toml  coc.toml  daggerheart.toml  dnd5e.toml  generic.toml  pf2e.toml  wordsmith.toml
src/: Makefile  audio.rs  cli.rs  config.rs  deps.rs  hardware.rs  lib.rs  main.rs  models.rs  pipeline.rs  presets.rs  prompts.rs  session.rs  transcribe.rs  ui.rs
src/commands/: doctor.rs  home.rs  init.rs  log_cmd.rs  mod.rs  models.rs  notes.rs  run.rs  systems.rs  transcribe.rs
src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs
