[package]
name = "sessionsmith"
version = "0.1.0"
edition = "2021"
description = "World-class TTRPG session notes CLI: audio → transcript → GM notes"
license = "MIT"
repository = "https://github.com/local/sessionsmith"

[[bin]]
name = "sessionsmith"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
inquire = "0.7"
indicatif = { version = "0.17", features = ["tokio"] }
comfy-table = "7"
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
eventsource-stream = "0.2"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
sysinfo = "0.32"
dirs = "5"
walkdir = "2"
humantime = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
regex = "1"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
